--- a/package.json
+++ b/package.json
@@ -4,14 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "parcel index.html",
+    "build": "parcel build --public-url . index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "ZuoLiping",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.27.2",
     "ol": "^6.15.1",
     "qs": "^6.11.0"
+  },
+  "devDependencies": {
+    "parcel": "^2.0.0"
   }
 }
